# the-mind-agents

./: .gitignore  GEMINI.md  README.md  pyproject.toml
configs/: .example_game.yaml.swp  example_game.yaml  one_llm_game.yaml  one_llm_game_testing.yaml  perfect_players_game.yaml
tests/: test_game.py  test_game_review.py  test_llmagent.py  test_main.py  test_team.py
themind/: __init__.py  agents.py  game.py  main.py  team.py
themind/agents/: __init__.py  agents.py  llmagent.py  registry.py  team.py
themind/agents/prompts/: decide_move.prompt  review_game.prompt
themind/game/: game.py  repo.py  review.py
